Crystal irems and plates added

--- a/src/main/resources/assets/lumens/lang/en_us.json
+++ b/src/main/resources/assets/lumens/lang/en_us.json
@@ -1,21 +1,26 @@
 {
   "itemGroup.LumensTab": "Lumens",
 
+  "item.lumens.crystal_arnalios": "Arnalios",
   "item.lumens.crystal_azurite": "Azurite",
-  "item.lumens.crystal_realgar": "Realgar",
-  "item.lumens.crystal_nephrite": "Nephrite",
   "item.lumens.crystal_carnelian": "Carnelian",
-  "item.lumens.crystal_tanzanite": "Tanzanite",
-  "item.lumens.crystal_heliotrope": "Heliotrope",
   "item.lumens.crystal_celestine": "Celestine",
+  "item.lumens.crystal_drakanine": "Drakanine",
+  "item.lumens.crystal_hallinite": "Hallinite",
+  "item.lumens.crystal_heliotrope": "Heliotrope",
+  "item.lumens.crystal_jalshade": "Jalshade",
   "item.lumens.crystal_kai_stone": "Kai Stone",
   "item.lumens.crystal_lunarite": "Lunarite",
-  "item.lumens.crystal_syraltite": "Syraltite",
-  "item.lumens.crystal_arnalios": "Arnalios",
+  "item.lumens.crystal_nephrite": "Nephrite",
   "item.lumens.crystal_ortalos": "Ortalos",
-  "item.lumens.crystal_drakanine": "Drakanine",
-
-
+  "item.lumens.crystal_rashadine": "Rashadine",
+  "item.lumens.crystal_realgar": "Realgar",
+  "item.lumens.crystal_syraltite": "Syraltite",
+  "item.lumens.crystal_tanzanite": "Tanzanite",
+  "item.lumens.crystal_trallinish": "Trallinish",
+  "item.lumens.crystal_uvaorite": "Uvaorite",
+  "item.lumens.crystal_xandanzine": "Xandanzine",
+  "item.lumens.crystal_zarite": "Zarite",
 
   "item.lumens.ingot_adamant": "Adamant Ingot",
   "item.lumens.ingot_alscan": "Alscan Ingot",
@@ -65,7 +70,33 @@
   "item.lumens.ingot_yalite": "Yalite Ingot",
   "item.lumens.ingot_zinc": "Zinc Ingot",
 
-
+  "item.lumens.plate_alscan": "Alscan Plate",
+  "item.lumens.plate_black_glass": "Black Glass Plate",
+  "item.lumens.plate_blazing_alloy": "Blazing Alloy Plate",
+  "item.lumens.plate_brass": "Brass Plate",
+  "item.lumens.plate_bronze": "Bronze Plate",
+  "item.lumens.plate_celestial_kalinite": "Celestial Kalinite Plate",
+  "item.lumens.plate_copper": "Copper Plate",
+  "item.lumens.plate_draconian_scrith": "Draconian Scrith Plate",
+  "item.lumens.plate_enchanted_mythril": "Enchanted Mythril Plate",
+  "item.lumens.plate_ender_glass": "Ender Glass Plate",
+  "item.lumens.plate_glass": "Glass Plate",
+  "item.lumens.plate_iron": "Iron Plate",
+  "item.lumens.plate_kai_bronze": "Kai Bronze Plate",
+  "item.lumens.plate_kovar": "Kovar Plate",
+  "item.lumens.plate_magnalium": "Magnalum Plate",
+  "item.lumens.plate_nether_glass": "Nether Glass Plate",
+  "item.lumens.plate_purpur_glass": "Purpur Glass Plate",
+  "item.lumens.plate_rhenium": "Rhenium Plate",
+  "item.lumens.plate_rhodium": "Rhodium Plate",
+  "item.lumens.plate_soul_glass": "Soul Glass Plate",
+  "item.lumens.plate_spring_steel": "Spring Steel Plate",
+  "item.lumens.plate_steel": "Steel Plate",
+  "item.lumens.plate_syral_steel": "Syral Steel Plate",
+  "item.lumens.plate_tigo": "Tigo Plate",
+  "item.lumens.plate_tin": "Tin Plate",
+  "item.lumens.plate_titanium": "Titanium Plate",
+  "item.lumens.plate_tungsten": "Tungsten Plate",
 
   "block.lumens.ore_aluminium": "Aluminium Ore",
   "block.lumens.ore_antarium": "Antarium Ore",
