--- a/src/main/resources/assets/lumens/lang/en_us.json
+++ b/src/main/resources/assets/lumens/lang/en_us.json
@@ -53,6 +53,7 @@
   "item.lumens.ingot_ender_gold": "Ender Gold Ingot",
   "item.lumens.ingot_galinstan": "Galinstan Ingot",
   "item.lumens.ingot_gallium": "Gallium Ingot",
+  "item.lumens.ingot_germanium": "Germaniun Ingot",
   "item.lumens.ingot_hc_steel": "HC Steel Ingot",
   "item.lumens.ingot_indium": "Indium Ingot",
   "item.lumens.ingot_kai_bronze": "Kai Bronze Ingot",
@@ -83,6 +84,79 @@
   "item.lumens.ingot_tungsten": "Tungsten Ingot",
   "item.lumens.ingot_yalite": "Yalite Ingot",
   "item.lumens.ingot_zinc": "Zinc Ingot",
+
+  "item.lumens.dust_adamant": "Adamant Dust",
+  "item.lumens.dust_alscan": "Alscan Dust",
+  "item.lumens.dust_aluminium": "Aluminium Dust",
+  "item.lumens.dust_antarium": "Antarium Dust",
+  "item.lumens.dust_blazing_alloy": "Blazing Alloy Dust",
+  "item.lumens.dust_brass": "Brass Dust",
+  "item.lumens.dust_bronze": "Bronze Dust",
+  "item.lumens.dust_celestial_kalinite": "Celestial Kalinite Dust",
+  "item.lumens.dust_chrome": "Chrome Dust",
+  "item.lumens.dust_chrome_steel": "Chrome Steel Dust",
+  "item.lumens.dust_copper": "Copper Dust",
+  "item.lumens.dust_draconian_scrith": "Draconian Scrith Dust",
+  "item.lumens.dust_electrum": "Electrum Dust",
+  "item.lumens.dust_enchanted_mythril": "Enchanted Mythril Dust",
+  "item.lumens.dust_ender_gold": "Ender Gold Dust",
+  "item.lumens.dust_galinstan": "Galinstan Dust",
+  "item.lumens.dust_gallium": "Gallium Dust",
+  "item.lumens.dust_germanium": "Germanium Dust",
+  "item.lumens.dust_hc_steel": "HC Steel Dust",
+  "item.lumens.dust_indium": "Indium Dust",
+  "item.lumens.dust_kai_bronze": "Kai Bronze Dust",
+  "item.lumens.dust_kalinite": "Kalinite Dust",
+  "item.lumens.dust_karrosh": "Karrosh Dust",
+  "item.lumens.dust_kovar": "Kovar Dust",
+  "item.lumens.dust_lithium": "Lithium Dust",
+  "item.lumens.dust_lorite": "Lorite Dust",
+  "item.lumens.dust_magnalium": "Magnalium Dust",
+  "item.lumens.dust_magnesium": "Magnesium Dust",
+  "item.lumens.dust_manganese": "Manganese Dust",
+  "item.lumens.dust_mythril": "Mythril Dust",
+  "item.lumens.dust_nanite": "Nanite Dust",
+  "item.lumens.dust_nether_silver": "Nether Silver Dust",
+  "item.lumens.dust_pyrolite": "Pyrolite Dust",
+  "item.lumens.dust_radium": "Radium Dust",
+  "item.lumens.dust_rhenium": "Rhenium Dust",
+  "item.lumens.dust_rhodium": "Rhodium Dust",
+  "item.lumens.dust_scrith": "Scrith Dust",
+  "item.lumens.dust_silver": "Silver Dust",
+  "item.lumens.dust_spring_steel": "Spring Steel Dust",
+  "item.lumens.dust_steel": "Steel Dust",
+  "item.lumens.dust_syral_steel": "Syral Steel Dust",
+  "item.lumens.dust_tantalum": "Tantalum Dust",
+  "item.lumens.dust_tigo": "Tigo Dust",
+  "item.lumens.dust_tin": "Tin Dust",
+  "item.lumens.dust_titanium": "Titanium Dust",
+  "item.lumens.dust_tungsten": "Tungsten Dust",
+  "item.lumens.dust_yalite": "Yalite Dust",
+  "item.lumens.dust_zinc": "Zinc Dust",
+  "item.lumens.dust_arnalios": "Arnalios Dust",
+  "item.lumens.dust_azurite": "Azurite Dust",
+  "item.lumens.dust_carnelian": "Carnelian Dust",
+  "item.lumens.dust_celestine": "Celestine Dust",
+  "item.lumens.dust_drakanine": "Drakanine Dust",
+  "item.lumens.dust_hallinite": "Hallinite Dust",
+  "item.lumens.dust_heliotrope": "Heliotrope Dust",
+  "item.lumens.dust_jalshade": "Jalshade Dust",
+  "item.lumens.dust_kai_stone": "Kai Stone Dust",
+  "item.lumens.dust_lunarite": "Lunarite Dust",
+  "item.lumens.dust_nephrite": "Nephrite Dust",
+  "item.lumens.dust_ortalos": "Ortalos Dust",
+  "item.lumens.dust_rashadine": "Rashadine Dust",
+  "item.lumens.dust_realgar": "Realgar Dust",
+  "item.lumens.dust_syraltite": "Syraltite Dust",
+  "item.lumens.dust_tanzanite": "Tanzanite Dust",
+  "item.lumens.dust_trallinish": "Trallinish Dust",
+  "item.lumens.dust_uvaorite": "Uvaorite Dust",
+  "item.lumens.dust_xandanzine": "Xandanzine Dust",
+  "item.lumens.dust_zarite": "Zarite Dust",
+  "item.lumens.dust_iron": "Iron Dust",
+  "item.lumens.dust_gold": "Gold Dust",
+  "item.lumens.dust_diamond": "Diamond Dust",
+  "item.lumens.dust_emerald": "Emerald Dust",
 
   "item.lumens.plate_alscan": "Alscan Plate",
   "item.lumens.plate_black_glass": "Black Glass Plate",
