--- a/src/main/resources/assets/lumens/lang/en_us.json
+++ b/src/main/resources/assets/lumens/lang/en_us.json
@@ -209,6 +209,37 @@
   "item.lumens.wire_shell_quantum": "Quantum Wire Shell",
   "item.lumens.wire_shell_dragonforged": "Dragonforged Wire Shell",
 
+  "item.lumens.pvb_primitive": "Primitive PVB",
+  "item.lumens.pvb_basic": "Basic PVB",
+  "item.lumens.pvb_advanced": "Advanced PVB",
+  "item.lumens.pvb_elite": "Elite PVB",
+  "item.lumens.pvb_hellborn": "Hellborn PVB",
+  "item.lumens.pvb_quantum": "Quantum PVB",
+  "item.lumens.pvb_dragonforged": "Dragonforged PVB",
+
+  "item.lumens.lvb_primitive": "Primitive LVB",
+  "item.lumens.lvb_basic": "Basic LVB",
+  "item.lumens.lvb_advanced": "Advanced LVB",
+  "item.lumens.lvb_elite": "Elite LVB",
+  "item.lumens.lvb_hellborn": "Hellborn LVB",
+  "item.lumens.lvb_quantum": "Quantum LVB",
+  "item.lumens.lvb_dragonforged": "Dragonforged LVB",
+
+  "item.lumens.reflector_primitive": "Primitive Reflector",
+  "item.lumens.reflector_basic": "Basic Reflector",
+  "item.lumens.reflector_advanced": "Advanced Reflector",
+  "item.lumens.reflector_elite": "Elite Reflector",
+  "item.lumens.reflector_hellborn": "Hellborn Reflector",
+  "item.lumens.reflector_quantum": "Quantum Reflector",
+  "item.lumens.reflector_dragonforged": "Dragonforged Reflector",
+  "item.lumens.reflector_lunar_primitive": "Primitive Lunar Reflector",
+  "item.lumens.reflector_lunar_basic": "Basic Lunar Reflector",
+  "item.lumens.reflector_lunar_advanced": "Advanced Lunar Reflector",
+  "item.lumens.reflector_lunar_elite": "Elite Lunar Reflector",
+  "item.lumens.reflector_lunar_hellborn": "Hellborn Lunar Reflector",
+  "item.lumens.reflector_lunar_quantum": "Quantum Lunar Reflector",
+  "item.lumens.reflector_lunar_dragonforged": "Dragonforged Lunar Reflector",
+  
   "block.lumens.ore_aluminium": "Aluminium Ore",
   "block.lumens.ore_antarium": "Antarium Ore",
   "block.lumens.ore_azurite": "Azurite Ore",
