Making Panels Work

--- a/src/main/resources/assets/lumens/lang/en_us.json
+++ b/src/main/resources/assets/lumens/lang/en_us.json
@@ -248,6 +248,8 @@
   "item.lumens.reflector_lunar_dragonforged": "Dragonforged Lunar Reflector",
 
   "block.lumens.solar_primitive": "Primitive Solar Panel",
+  "solar.tooltip": "Generation Rate in the \u00A76day\u00A7f: ",
+  "lunar.tooltip": "Generation Rate at \u00A75night\u00A7f: ",
   "block.lumens.solar_basic": "Basic Solar Panel",
   "block.lumens.solar_advanced": "Advanced Solar Panel",
   "block.lumens.solar_elite": "Elite Solar Panel",
